# NES-Emulator

./: .gitignore  CMakeLists.txt  Makefile  NES  README.md
src/: NES.cpp  bus.cpp  bus.h  cartridge.cpp  cartridge.h  controller.cpp  controller.h  cpu.cpp  cpu.h  cpu_memory.cpp  cpu_memory.h  main.cpp  nes.cpp  nes.h  ppu.cpp  ppu.h
test/: ines_header_test.cpp  runTests.sh
